Fetosense API - variable name change and generate PDF correction (#34)
* Corrected the properties variable name for ANC fetosense test

* Corrected partner fetosense Id variable name in FeotalMonitorData

* Corrected GeneratePDF from reportPath

* Added protocol check condition to identify invalid protocol

* Added condition to check filepath

* Added new URL inside condition check

* Added hostname comparison in foetalMonitor update

* fetosense update api - generate pdf changes

---------

Co-authored-by: Devika <de40034072@wipro.com>